syntax ="proto3";

option java_multiple_files = true;
option java_package = "com.movieservice.grpcflix.movie";
import "common/common.proto";

message MovieSearchResponse{
 string title = 1;
 int32 year = 2;
 double rating = 3;
}

message MovieSearchRequest{
  Genre genre = 1;
}

service MovieService{

  // streaming server
  rpc getMovies(MovieSearchRequest) returns (stream MovieSearchResponse);
}